Update 22:00 Wed, 02 Mar

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".intellimacs"]
 	path = .intellimacs
 	url = https://github.com/MarcoIeni/intellimacs.git
+[submodule ".config/taffybar/taffybar"]
+	path = .config/taffybar/taffybar
+	url = https://github.com/Patriot720/taffybar
