--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,11 +1,11 @@
 # Custom Stuff
 backend = "glx";
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
+# glx-no-stencil = true;
+# glx-no-rebind-pixmap = true;
 # glx-swap-method = buffer-age
-xrender-sync-fence = true
+# xrender-sync-fence = true
 # paint-on-overlay = true
-vsync = true;
+# vsync = true;
 
 
 # corner-radius = 12.0;
@@ -25,22 +25,24 @@ vsync = true;
 # ];
 
 
-blur: {
-  # method = "box";
-  # size = 5;
-  # strength = 10;
-  # deviation = 0.8;
-  # background = true;
-  # background-frame = false;
-  # background-fixed = false;
-}
-
+# blur: {
+#   method = "box";
+#   size = 5;
+#   strength = 10;
+#   deviation = 0.8;
+#   background = true;
+#   background-frame = false;
+#   background-fixed = false;
+# }
+# blur-background = [
+#   "80:class_g = 'Guake'",
+# ]
 # blur-background-exclude = [
 #     "class_g ?= 'albert'"
 # ]
 
 # Shadow
-# shadow = false;			# Enabled client-side shadows on windows.
+shadow = false;			# Enabled client-side shadows on windows.
 # no-dock-shadow = true;		# Avoid drawing shadows on dock/panel windows.
 # no-dnd-shadow = true;		# Don't draw shadows on DND windows.
 # clear-shadow = true;		# Zero the part of the shadow's mask behind the window (experimental).
@@ -73,8 +75,8 @@ blur: {
 #shadow-ignore-shaped = true;
 
 # Opacity
-# menu-opacity = 0.95;			# The opacity for menus. (default 1.0)
-# inactive-opacity = 0.88;			# Opacity of inactive windows. (0.1 - 1.0)
+menu-opacity = 0.95;			# The opacity for menus. (default 1.0)
+# inactive-opacity = 0.95;			# Opacity of inactive windows. (0.1 - 1.0)
 # frame-opacity = 0.95;			# Opacity of window titlebars and borders. (0.1 - 1.0)
 # inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
 # detect-client-opacity = true;
@@ -113,13 +115,13 @@ opacity-rule = [
 # no-fading-openclose = true;	# Fade windows in/out when opening/closing.
 
 # Other
-#inactive-dim = 0.5;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
+# inactive-dim = 0.5;		# Dim inactive windows. (0.0 - 1.0, defaults to 0).
 # mark-wmwin-focused = true;	# Try to detect WM windows and mark them as active.
 # mark-ovredir-focused = true;
 # detect-rounded-corners = true;
 # detect-client-opacity = true;
 # Window type settings
-# wintypes:
-# {
-#   tooltip = { fade = true; shadow = false; opacity = 0.75; };
-# };
+wintypes:
+{
+  tooltip = { fade = true; shadow = false; opacity = 0.75; };
+};
