Update 22:00 Fri, 08 Apr

--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,9 +1,9 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
-custom_palette=true
+custom_palette=false
 icon_theme=ePapirus-Dark
 standard_dialogs=gtk3
-style=Breeze
+style=kvantum-dark
 
 [Fonts]
 fixed=@Variant(\0\0\0@\0\0\0&\0\x42\0i\0t\0s\0t\0r\0\x65\0\x61\0m\0 \0V\0\x65\0r\0\x61\0 \0S\0\x61\0n\0s@(\0\0\0\0\0\0\xff\xff\xff\xff\x5\x1\0\x32\x10)
@@ -24,8 +24,11 @@ toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
 
+[QSSEditor]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\fO\0\0\x1\b\0\0\xe\xcf\0\0\x2\xf8\0\0\fP\0\0\x1\t\0\0\xe\xce\0\0\x2\xf7\0\0\0\x1\0\0\0\0\a\x80\0\0\fP\0\0\x1\t\0\0\xe\xce\0\0\x2\xf7)
+
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\r\xc0\0\0\0\0\0\0\x11\x7f\0\0\x4!\0\0\r\xc5\0\0\0\x5\0\0\x11z\0\0\x4\x1c\0\0\0\x1\0\0\0\0\a\x80\0\0\r\xc5\0\0\0\x5\0\0\x11z\0\0\x4\x1c)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n\0\0\0\0\0\0\0\x11\x7f\0\0\x4\x19\0\0\n\0\0\0\0\0\0\0\x11\x7f\0\0\x4\x19\0\0\0\x1\0\0\0\0\a\x80\0\0\n\0\0\0\0\0\0\0\x11\x7f\0\0\x4\x19)
 
 [Troubleshooting]
 force_raster_widgets=1
