--- a/.config/yay/config.json
+++ b/.config/yay/config.json
@@ -27,10 +27,10 @@
 	"requestsplitn": 150,
 	"sortmode": 0,
 	"completionrefreshtime": 7,
-	"sudoloop": false,
+	"sudoloop": true,
 	"timeupdate": false,
 	"devel": false,
-	"cleanAfter": false,
+	"cleanAfter": true,
 	"provides": true,
 	"pgpfetch": true,
 	"upgrademenu": true,
