Update 22:00 Sun, 03 Jul

--- a/.config/OpenTabletDriver/settings.json
+++ b/.config/OpenTabletDriver/settings.json
@@ -224,8 +224,26 @@
           null
         ],
         "AuxButtons": [
-          null,
-          null,
+          {
+            "Path": "OpenTabletDriver.Desktop.Binding.KeyBinding",
+            "Settings": [
+              {
+                "Property": "Key",
+                "Value": "Z"
+              }
+            ],
+            "Enable": true
+          },
+          {
+            "Path": "OpenTabletDriver.Desktop.Binding.KeyBinding",
+            "Settings": [
+              {
+                "Property": "Key",
+                "Value": "X"
+              }
+            ],
+            "Enable": true
+          },
           null,
           null
         ],
