Update 22:00 Thu, 07 Jul

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,14 +2,14 @@
 #             Animations        #
 #################################
 
-animations: true;
+animations = true;
 animation-stiffness = 150
 animation-window-mass = 0.1
 animation-dampening = 10
-animation-clamping = false
+animation-clamping = true
 animation-for-open-window = "zoom"; #open window
-animation-for-unmap-window = "zoom"; #minimize window
-# animation-for-transient-window = "none"; #popup windows
+animation-for-unmap-window = "none"; #minimize window
+animation-for-transient-window = "none"; #popup windows
 # animation-for-workspace-switch-in = "slide-down"; #the windows in the workspace that is coming in
 # animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
 
@@ -174,13 +174,13 @@ focus-exclude = [
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'Chromium'",
-  "class_g *?= 'slop'",
-];
+# blur-background-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'",
+#   "_GTK_FRAME_EXTENTS@:c",
+#   "class_g = 'Chromium'",
+#   "class_g *?= 'slop'",
+# ];
 
 #################################
 #       General Settings        #
@@ -213,8 +213,8 @@ mark-ovredir-focused = true;
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
-# detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = false
+# detect-rounded-corners = true;
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
@@ -283,7 +283,7 @@ glx-no-stencil = true;
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
 #
-# glx-no-rebind-pixmap = false
+glx-no-rebind-pixmap = true
 
 # Disable the use of damage information.
 # This cause the whole screen to be redrawn everytime, instead of the part of the screen
@@ -334,7 +334,7 @@ transparent-clipping = false;
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "warn";
+# log-level = "warn";
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
@@ -386,7 +386,7 @@ log-level = "warn";
 #
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  tooltip = { fade = false; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; clip-shadow-above = true; }
   dnd = { shadow = false; }
   popup_menu = { opacity = 0.8; }
@@ -396,6 +396,5 @@ wintypes:
 opacity-rule = [
   "50:class_g = 'St' && !focused",
   "100:class_g = 'St' && focused",
-  "85:class_g *?= 'Rofi'",
   "100:fullscreen",
 ];
