--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,14 +2,14 @@
 #             Animations        #
 #################################
 
-animations = true;
+# animations = true;
 animation-stiffness = 150
 animation-window-mass = 0.1
 animation-dampening = 10
-animation-clamping = true
+animation-clamping = false
 animation-for-open-window = "zoom"; #open window
-animation-for-unmap-window = "none"; #minimize window
-animation-for-transient-window = "none"; #popup windows
+# animation-for-unmap-window = "none"; #minimize window
+# animation-for-transient-window = "none"; #popup windows
 # animation-for-workspace-switch-in = "slide-down"; #the windows in the workspace that is coming in
 # animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
 
@@ -232,7 +232,7 @@ use-ewmh-active-win = true;
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -251,7 +251,7 @@ detect-transient = true;
 # will be considered focused or unfocused at the same time.
 # 'WM_TRANSIENT_FOR' has higher priority if detect-transient is enabled, too.
 #
-# detect-client-leader = false
+detect-client-leader = true
 
 # Resize damaged region by a specific number of pixels.
 # A positive value enlarges it while a negative one shrinks it.
@@ -276,7 +276,7 @@ detect-transient = true;
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
 #
-glx-no-stencil = true;
+glx-no-stencil = false;
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
@@ -297,7 +297,7 @@ use-damage = true;
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
 # with GLX backend for some users.
 #
-xrender-sync-fence = true;
+xrender-sync-fence = false;
 
 # GLX backend: Use specified GLSL fragment shader for rendering window contents.
 # See `compton-default-fshader-win.glsl` and `compton-fake-transparency-fshader-win.glsl`
@@ -386,11 +386,11 @@ transparent-clipping = false;
 #
 wintypes:
 {
-  tooltip = { fade = false; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
-  dock = { shadow = false; clip-shadow-above = true; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  # tooltip = { fade = false; shadow = false; opacity = 0.75; focus = true; full-shadow = false; };
+  # dock = { shadow = false; clip-shadow-above = false; }
+  # dnd = { shadow = false; }
+  # popup_menu = { opacity = 0.8; }
+  # dropdown_menu = { opacity = 0.8; }
 };
 
 opacity-rule = [
