Update 22:00 Wed, 13 Jul

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -2,7 +2,7 @@
 #             Animations        #
 #################################
 
-# animations = true;
+animations = true;
 animation-stiffness = 150
 animation-window-mass = 0.1
 animation-dampening = 10
@@ -142,6 +142,8 @@ inactive-opacity-override = true;
 # focus-exclude = []
 focus-exclude = [
 "class_g = 'Cairo-clock'" ,
+"class_g = 'My-taffybar'" ,
+# "class_g = 'Gnome-system-monitor'" ,
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -162,7 +164,7 @@ focus-exclude = [
 #  "window_type = 'desktop'"
 #];
 
-
+blur = false
 # blur: {
 #   method = "dual_kawase";
 #   strength = 9;
