--- a/.config/i3/conf.d/workspaces_and_monitors.conf
+++ b/.config/i3/conf.d/workspaces_and_monitors.conf
@@ -11,15 +11,15 @@ set $ws8 "8: "
 set $ws9 "9: "
 set $ws10 "10:  "
 
-set $monitor_1 DP-0
-set $monitor_2 DVI-D-1
+# set $monitor_1 DP-0
+# set $monitor_2 DVI-D-1
 
-workspace $ws1 output $monitor_1
-workspace $ws2 output $monitor_1
-workspace $ws9 output $monitor_2
-workspace $ws10 output $monitor_2
-workspace $ws8 output $monitor_2
-workspace $ws7 output $monitor_2
+# workspace $ws1 output $monitor_1
+# workspace $ws2 output $monitor_1
+# workspace $ws9 output $monitor_2
+# workspace $ws10 output $monitor_2
+# workspace $ws8 output $monitor_2
+# workspace $ws7 output $monitor_2
 
 
 # switch to workspace
