Update 22:00 Fri, 15 Jul

--- a/.config/i3/conf.d/shortcuts.conf
+++ b/.config/i3/conf.d/shortcuts.conf
@@ -37,10 +37,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-bindsym $mod+Shift+h move left
+bindsym $mod+Mod1+j move down
+bindsym $mod+Mod1+k move up
+bindsym $mod+Mod1+l move right
+bindsym $mod+Mod1+h move left
 # bindsym $mod+Mod1+semicolon move right
 
 # alternatively, you can use the cursor keys:
@@ -137,12 +137,12 @@ bindsym $mod+c exec --no-startup-id ~/.config/rofi/launchers/text/calc.sh
 # Scratchpad:
 #
 bindsym  $mod+Shift+Period move scratchpad
-# bindsym  $mod+Alt+Period move scratchpad
+bindsym  $mod+Alt+Period move scratchpad
 
 bindsym  $mod+Shift+z move scratchpad
 
 bindsym  $mod+Shift+minus move scratchpad
-# bindsym  $mod+Alt+minus move scratchpad
+bindsym  $mod+Alt+minus move scratchpad
 
 bindsym  $mod+z scratchpad show
 bindsym  $mod+Period scratchpad show
