--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,7 +6,7 @@ animations = true;
 animation-stiffness = 150
 animation-window-mass = 0.1
 animation-dampening = 10
-animation-clamping = false
+animation-clamping = true
 animation-for-open-window = "zoom"; #open window
 # animation-for-unmap-window = "none"; #minimize window
 # animation-for-transient-window = "none"; #popup windows
