--- a/.config/i3/conf.d/exec.conf
+++ b/.config/i3/conf.d/exec.conf
@@ -4,7 +4,7 @@ exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # exec --no-startup-id /usr/lib/kdeconnectd
 
-exec_always feh --bg-fill ~/.config/i3/bg/530895_souredapple_clouds.png
+# exec_always feh --bg-fill ~/.config/i3/bg/530895_souredapple_clouds.png
 # exec --no-startup-id variety
 
 #redshift night light
@@ -35,7 +35,8 @@ exec --no-startup-id nm-applet
 exec --no-startup-id dunst
 # exec_always --no-startup-id fcitx -d
 
-exec_always --no-startup-id ~/.config/polybar/launch.sh
+# exec_always --no-startup-id ~/.config/polybar/launch.sh
+exec_always fish -c "my-taffybar"
 
 #Sync repos
 # exec_always --no-startup-id /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
