--- a/.config/i3/conf.d/workspaces_and_monitors.conf
+++ b/.config/i3/conf.d/workspaces_and_monitors.conf
@@ -6,11 +6,15 @@ set $ws3 "3"
 set $ws4 "4"
 set $ws5 "5"
 set $ws6 "6"
-set $ws7 "7: "
-set $ws8 "8: "
-set $ws9 "9: "
-set $ws10 "10:  "
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
 
+# :  
+#: 
+#: 
+#: 
 # set $monitor_1 DP-0
 # set $monitor_2 DVI-D-1
 
